# fastapi-jinja-websockets

./: LICENSE.txt  README.md  main.py  pyproject.toml
templates/: index.html
