[tool.poetry]
name = "fastapi-websocket"
version = "0.1.0"
description = "Testing out websockets in FastAPI"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
